# Neural-Spectra-for-Optics

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  agentoptics_explainer.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/: data_generation.py  duke_loader.py  real_data_loader.py
evaluation/: ablation.py  compression_ablation.py  eval.py  metrics.py
experiments/: eval_results.json
experiments/checkpoints/: speccompress_india_v1_config.yaml
experiments/logs/: speccompress_india_v1_metrics.csv
models/: baselines.py  decoder.py  encoder.py  llm_integration.py  physics_loss.py  speccompress.py  temp_robustness.py
tests/: test_model.py
training/: train.py  trainer.py
utils/: dataloader.py  duke_loader.py  helpers.py  llm_integration.py  logger.py
